--- a/QuienSomos.html
+++ b/QuienSomos.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="nav-wrapper">
           <a href="./index.html" class="brand-logo">
-            <img src="./img/logo-unitools-nombre.png" alt="" width="150px">
+            <img src="./img/Logo.png" alt="" width="150px">
           </a>
           <a href="#" data-activates="mobile-nav" class="button-collapse">
             <i class="fa fa-bars"></i>
@@ -33,9 +33,6 @@
             </li>
             <li>
               <a href="signup.html">Regístrate</a>
-            </li>
-            <li>
-              <a href="#login-modal" class="btn purple modal-trigger">Login</a>
             </li>
             <li>
               <a href="https://facebook.com">
@@ -85,7 +82,6 @@
     <div class="showcase container">
       <div class="row">
         <div class="col s12 m10 offset-m1 center">
-          <h5>UniTools</h5>
           <h1>Knowledge For All</h1>
         </div>
       </div>
@@ -99,7 +95,7 @@
       <div class="row">
         <div class="col s12 m5">
           <h2>Qué hacemos...</h2>
-          <p>Somos una comunidad estudiantil de la Facultad de Ciencias Físico Matemáticas que cree que todos deberíamos tener acceso a la educación. Nosotros recopilamos todo tipo de notas, libros y cursos gratuitos y los compartimos para que estén para el uso de la comunidad. </p>
+          <p>En nuestra página, nos esforzamos por brindar información valiosa y herramientas prácticas para abordar conflictos de manera constructiva y fomentar una cultura de paz en diversos entornos. </p>
         </div>
         <div class="col s12 m6 offset-m1">
           <div class="row">
@@ -112,13 +108,13 @@
                   <a href="#tab2" class="purple-text">Tips</a>
                 </li>
                 <li class="tab col s4">
-                  <a href="#tab3" class="purple-text">Notas</a>
+                  <a href="#tab3" class="purple-text">MÁS</a>
                 </li>
               </ul>
             </div>
             <div id="tab1" class="col s12">
               <h5>Cursos Gratuitos</h5>
-              <p>Nosotros recopilamos cientos de cursos gratuitos ofrecidos por universidades o diferentes plataformas para que los alumnos puedan tener mas conocimiento para sus carrera.</p>
+              <p>Nosotros recopilamos cientos de cursos gratuitos ofrecidos por universidades o diferentes plataformas para que las personas puedan tener mas conocimiento que los ayude en su vida.</p>
             </div>
             <div id="tab2" class="col s12">
               <h5>Tips y más</h5>
@@ -137,8 +133,8 @@
   <!-- Sección Características -->
   <section class="section section-features grey lighten-3">
     <div class="container">
-      <h4 class="purple-text text-darken-1 center">Conocimiento de la Comunidad</h4>
-      <h6 class="grey-text text-darken-2 center">De estudiantes para estudiantes</h6>
+      <h4 class="purple-text text-darken-1 center">Educación para el mundo</h4>
+      <h6 class="grey-text text-darken-2 center">De estudiantes para el mundo</h6>
       <br>
       <br>
       <!-- Fila 1 -->
@@ -147,43 +143,23 @@
           <h5>
             <i class="fa fa-user"></i>Gran Comunidad 
           </h5>
-          <p>Unimos a estudiantes de diferentes carreras y niveles académicos para crear una red de apoyo y colaboración. Los estudiantes pueden compartir recursos, consejos y experiencias para mejorar su aprendizaje y crecimiento personal y profesional. Además, la comunidad promueve la inclusión y la diversidad, fomentando el respeto y la tolerancia entre los miembros.</p>
+          <p>En este espacio, reunimos a personas de diferentes trasfondos y culturas, que comparten un objetivo común: fomentar la paz y la armonía en el mundo. Nuestra comunidad se esfuerza por crear un ambiente inclusivo y respetuoso, donde todos pueden contribuir y aprender a través del diálogo y la colaboración.</p>
         </div>
         <div class="col s12 m4">
           <h5>
-            <i class="fa fa-solid fa-graduation-cap"></i> Para todas las carreras
+            <i class="fa-solid fa-person-chalkboard"></i> Enseñanza
           </h5>
-          <p>La plataforma está diseñada para servir a estudiantes de todas las carreras y proporciona recursos, apoyo y una comunidad de mentores y estudiantes para ayudar en el camino académico y profesional.</p>
+          <p>Aquí, nos enfocamos en brindar recursos y herramientas educativas para fomentar el aprendizaje y la comprensión de los valores y principios fundamentales que sustentan una cultura de paz. Nuestra misión es empoderar a educadores, estudiantes y personas interesadas en el tema para que se conviertan en agentes de cambio positivo en sus comunidades y entornos educativos.</p>
         </div>
         <div class="col s12 m4">
           <h5>
             <i class="fa fa-solid fa-map"></i>Un camino a seguir
           </h5>
-          <p>Brindamos recursos y herramientas para ayudar a los estudiantes a planificar y alcanzar sus metas académicas y profesionales. Ofrece información sobre las opciones de carrera disponibles en diferentes campos y proporciona consejos útiles sobre cómo desarrollar habilidades y conocimientos relevantes para el mercado laboral actual. </p>
+          <p>En esta sección, te invitamos a embarcarte en un viaje transformador hacia la construcción de un mundo más pacífico y compasivo. Aquí, encontrarás historias reales de personas que han sido agentes de cambio en sus comunidades, llevando a cabo proyectos y acciones significativas para promover la paz y la resolución de conflictos.</p>
         </div>
       </div>
 
       <!-- Fila 2 -->
-      <div class="row">
-        <div class="col s12 m4">
-          <h5>
-            <i class="small material-icons">book</i>Contenido Gratuito 
-          </h5>
-          <p>Todo nuestro contenido está disponible sin costo alguno para los estudiantes. Este puede incluir libros de texto en línea, recursos de aprendizaje, videos educativos, tutoriales, actividades y ejercicios prácticos, entre otros. Este tipo de contenido es una gran ayuda para los estudiantes, ya que les permite acceder a una amplia gama de recursos sin incurrir en gastos adicionales y les brinda la oportunidad de aprender y mejorar en su campo de estudio.</p>
-        </div>
-        <div class="col s12 m4">
-          <h5>
-            <i class="fa-solid fa-person-chalkboard"></i> Programa Mentores
-          </h5>
-          <p>El programa de mentores conecta estudiantes principiantes con mentores experimentados en el campo de estudio para brindar orientación y apoyo. Los mentores comparten su experiencia y ayudan a los estudiantes a superar desafíos académicos y profesionales, mejorando su confianza y motivación para alcanzar sus objetivos.</p>
-        </div>
-        <div class="col s12 m4">
-          <h5>
-            <i class="fa-solid fa-network-wired"></i>Programa Internships
-          </h5>
-          <p>Una iniciativa que conecta a estudiantes con empresas para obtener experiencia práctica en su campo de estudio. Los estudiantes trabajan con profesionales experimentados en la industria y aprenden habilidades valiosas en un ambiente de trabajo real. Además, pueden establecer contactos profesionales y explorar opciones de carrera mientras construyen su currículum.</p>
-        </div>
-      </div>
       <div class="center">
         <a href="signup.html" class="btn btn-large purple">Regístrate</a>
         <br>
@@ -191,7 +167,7 @@
         <h5>
           <span class="deep-purple-text text-lighten-1">¿Quieres formar parte del equipo?</span> Contáctenos
         </h5>
-        <p>unitools@gmail.com</p>
+        <p>MPCU@uanl.edu.com</p>
       </div>
     </div>
   </section>
