--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
               <a href="signup.html" >Regístrate</a>
             </li>
             <li>
-              <a href="#login-modal" class="btn purple modal-trigger">Login</a>
-            </li>
-            <li>
               <a href="https://facebook.com">
                 <i class="fab fa-facebook"></i>
               </a>
@@ -183,11 +180,11 @@
         <div class="col s12 m4">
           <div class="card hoverable">
             <div class="card-image">
-              <img src="./img/fondo-card.jpg" alt="">
-              <span class="card-title">GUIA 2</span>
+              <img src="./img/Emociones.jpg" alt="">
+              <span class="card-title">Manejo de las emociones</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium nam laborum alias numquam atque dignissimos ipsum ratione deleniti, minus deserunt eaque facilis quibusdam ea! Rem ea expedita quidem optio aut.</p>
+              <p>En la vida cotidiana, las emociones desempeñan un papel fundamental en nuestra experiencia y comportamiento. A menudo, pueden ser como montañas rusas que nos llevan a la cima de la felicidad o nos sumergen en la tristeza y la frustración. Es por eso que entender y manejar nuestras emociones de manera saludable se convierte en una habilidad invaluable para nuestro bienestar y calidad de vida.</p>
             </div>
             <div class="card-action">
               <a href="" class="purple-text">Más</a>
@@ -221,7 +218,7 @@
         <div class="row">
           <div class="col s12 m8">
             <h4>Comparte tus experiencias</h4>
-            <p>Si eres un estudiante a punto de graduarte tomate el tiempo y escribe consejos o tips para los estudiantes de nuevo ingreso</p>
+            <p>Si eres una persona en busca de compartir experiencias y consejos para una mejor convivencia o en busca de estos estas en el lugar correcto!</p>
           </div>
           <div class="col s12 m4">
             <a href="#" class="btn purple btn-large">
@@ -242,9 +239,9 @@
             <div class="carousel-item" href="#one!">
               <h2>Opiniones</h2>
               <p class="flow-text" style="user-select: non
-              !important;">"En UniTools, puedo encontrar una gran cantidad de material de estudio, incluyendo apuntes de clases, tutoriales, ejemplos de código y ejercicios prácticos. También puedo acceder a foros y comunidades en línea donde puedo hacer preguntas y obtener respuestas de otros estudiantes y maestros."
+              !important;">"He encontrado en la página de Cultura de Paz un oasis de recursos valiosos para abordar conflictos de manera constructiva en mi comunidad. Gracias a las guías prácticas y consejos, pude mediar entre dos vecinos que estaban en una disputa por el ruido constante. Ambos llegaron a un acuerdo amistoso y ahora disfrutamos de un ambiente más armonioso en nuestro vecindario. ¡Gracias por empoderarnos con herramientas para construir una cultura de paz!"
                 <p>
-                  <em>- Diego Alvarado</em>
+                  <em>- Ana</em>
                 </p>
               </p>
               <div class="carousel-fixed-item center hide-on-small-and-down">
@@ -254,9 +251,9 @@
             <div class="carousel-item" href="#two!">
               <h2>Opiniones</h2>
               <p class="flow-text" style="user-select: non
-              !important;">"UniTools me brinda acceso a una gran cantidad de materiales de estudio, como videos de conferencias, simulaciones y ejemplos de problemas resueltos. También puedo encontrar información sobre las últimas investigaciones en física, lo que me permite estar al día con los avances más recientes en mi campo."
+              !important;">"Como profesor, me sentía desafiado por la creciente cantidad de conflictos entre mis estudiantes. Gracias a la sección de Resolución de Conflictos Escolares en la página de Cultura de Paz, pude implementar nuevas estrategias de comunicación y mediación en el aula. Ha sido impresionante ver cómo los estudiantes aprendieron a expresar sus sentimientos y resolver sus diferencias de manera respetuosa. Nuestra clase ahora es un espacio donde la convivencia pacífica es valorada y practicada diariamente."
                 <p>
-                  <em>- Max Zermeño</em>
+                  <em>- Javier</em>
                 </p>
               </p>
               <div class="carousel-fixed-item center hide-on-small-and-down">
@@ -266,9 +263,9 @@
             <div class="carousel-item" href="#three!">
               <h2>Opiniones</h2>
               <p class="flow-text" style="user-select: non
-              !important;">"En UniTools, puedo encontrar una amplia gama de material de estudio, como tutoriales, ejemplos de problemas resueltos, y prácticas de exámenes. También puedo encontrar aplicaciones y software matemático que me permiten hacer cálculos y visualizaciones complejas de manera más rápida y eficiente."
+              !important;">"Siempre había sentido curiosidad por la mediación y cómo podía aplicarla en mi vida personal y profesional. Gracias a la página de Cultura de Paz, me sumergí en la Maestría en Métodos Alternos para la Solución de Conflictos impartida por el Dr. Genaro Bermejo Acosta. Esta experiencia ha sido transformadora, brindándome un enfoque práctico y valioso para resolver conflictos de manera más pacífica y efectiva. Ahora estoy emocionada de compartir este conocimiento con mi equipo de trabajo y promover una cultura de paz en nuestra organización."
                 <p>
-                  <em>- Mariana Garza</em>
+                  <em>- Sarah</em>
                 </p>
               </p>
               <div class="carousel-fixed-item center hide-on-small-and-down">
