--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link type="text/css" rel="stylesheet" href="css/main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MPCU</title>
-  <link rel="icon" href="./img/logo-light-mode.svg" type="image/icon type" id="logo-theme">
+  <link rel="icon" href="./img/Logo-top.png" type="image/icon type" id="logo-theme">
 </head>
 <body>
   <!-- Header -->
@@ -187,7 +187,7 @@
               <p>En la vida cotidiana, las emociones desempeñan un papel fundamental en nuestra experiencia y comportamiento. A menudo, pueden ser como montañas rusas que nos llevan a la cima de la felicidad o nos sumergen en la tristeza y la frustración. Es por eso que entender y manejar nuestras emociones de manera saludable se convierte en una habilidad invaluable para nuestro bienestar y calidad de vida.</p>
             </div>
             <div class="card-action">
-              <a href="" class="purple-text">Más</a>
+              <a href="./Emociones.html" class="purple-text">Más</a>
             </div>
           </div>
         </div>
@@ -195,14 +195,16 @@
         <div class="col s12 m4">
           <div class="card hoverable">
             <div class="card-image">
-              <img src="./img/fondo-card.jpg" alt="">
-              <span class="card-title">GUIA 3</span>
+              <img src="./img/gestion-conflictos.jpg" alt="">
+              <span class="card-title">Gestionar un conflicto en 5 pasos</span>
             </div>
             <div class="card-content">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat error, repudiandae possimus vel iure fuga dicta sunt quidem explicabo dolor voluptates beatae molestiae? Saepe tenetur vero, enim dolorum numquam corrupti.</p>
+              <p>
+                Este curso está diseñado para proporcionarte herramientas prácticas y efectivas que te permitirán abordar los conflictos de manera constructiva y pacífica en cualquier área de tu vida. Sabemos que los conflictos son una parte natural de las relaciones humanas, pero también reconocemos la importancia de aprender a gestionarlos.
+              </p>
             </div>
             <div class="card-action">
-              <a href="" class="purple-text">Más</a>
+              <a href="./Conflicto.html" class="purple-text">Más</a>
             </div>
           </div>
         </div>
@@ -278,47 +280,6 @@
     </div>
   </section>
 
-  <!-- Sección: Tag Eventos -->
-  <section class="section section-noticias white-text">
-    <div class="primary-overlay valign-wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="col s12 center">
-            <h3>Noticias y Eventos</h3>
-          </div>
-        </div>
-        </div>
-      </div>
-  </section><br>
-
-  <!-- Sección Carrousel -->
-  <section>
-    <div class="container">
-    <div class="carousel carousel-slider" data-indicators="true">
-      <a href="#!one" class="carousel-item">
-        <img src="./img/slider-1.png" alt="">
-      </a>
-      <a href="#!two" class="carousel-item">
-        <img src="./img/slider-2.png" alt="">
-      </a>
-      <a href="#!three" class="carousel-item">
-        <img src="./img/slider-3.png" alt="">
-      </a>
-      <a href="#!four" class="carousel-item">
-        <img src="./img/slider-4.png" alt="">
-      </a>
-      <a href="#!five" class="carousel-item">
-        <img src="./img/slider-5.png" alt="">
-      </a>
-      <a href="#!six" class="carousel-item">
-        <img src="./img/slider-6.png" alt="">
-      </a>
-      <a href="#!seven" class="carousel-item">
-        <img src="./img/slider-7.png" alt="">
-      </a>
-    </div>
-  </div>
-  </section><br>
 
   <!-- Footer -->
   <footer class="page-footer deep-purple lighten-1 pie">
@@ -332,7 +293,7 @@
           <h5 class="white-text">Links</h5>
           <ul>
             <li>
-              <a class="grey-text text-lighten-3" href="../UniTools/index.html">Inicio</a>
+              <a class="grey-text text-lighten-3" href="../MPCU/index.html">Inicio</a>
             </li>
             <li>
               <a class="grey-text text-lighten-3" href="QuienSomos.html">Mas Sobre Nosotros</a>
