--- a/signup.html
+++ b/signup.html
@@ -9,8 +9,8 @@
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="css/main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> UniTools</title>
-  <link rel="icon" href="./img/Logos.png" type="image/icon type">
+  <title> MPCU</title>
+  <link rel="icon" href="./img/Logo-top.png" type="image/icon type">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="nav-wrapper">
           <a href="./index.html" class="brand-logo">
-            <img src="./img/logo-unitools-nombre.png" alt="" width="150px">
+            <img src="./img/Logo.png" alt="" width="150px">
           </a>
           <a href="#" data-activates="mobile-nav" class="button-collapse">
             <i class="fa fa-bars"></i>
@@ -33,10 +33,7 @@
               <a href="QuienSomos.html">Quienes Somos?</a>
             </li>
             <li>
-              <a class="active-link" href="signup.html">Registrate</a>
-            </li>
-            <li>
-              <a href="#login-modal" class="btn purple modal-trigger">Login</a>
+              <a class="active-link" href="signup.html">Regístrate</a>
             </li>
             <li>
               <a href="https://facebook.com">
@@ -86,7 +83,7 @@
     <div class="showcase container">
       <div class="row">
         <div class="col s12 m10 offset-m1 center">
-          <h5>Bienvenido a UniTools</h5>
+          <h5>Bienvenido</h5>
           <h1>Crea una cuenta</h1>
         </div>
       </div>
@@ -100,11 +97,13 @@
       <div class="row">
         <div class="col s12 m6">
           <h4>Crea una cuenta gratuita</h4>
-          <p>¡Regístrate ahora para tener acceso a nuestro contenido exclusivo! Crear una cuenta gratuita es rápido y fácil, y te permitirá guardar tus preferencias de búsqueda, acceder a recursos adicionales y conectarte con una comunidad de estudiantes y mentores en tu área de estudio. ¡No pierdas la oportunidad de unirte a nuestra comunidad de aprendizaje y crecimiento profesional!</p>
+          <p>¡Regístrate ahora para tener acceso a nuestro contenido exclusivo! Crear una cuenta gratuita es rápido y fácil, y te permitirá guardar tus preferencias de búsqueda, acceder a recursos adicionales y conectarte con una comunidad de agentes de cambio. ¡No pierdas la oportunidad de unirte!</p>
+
           <h4>Descarga todo tipo de recursos</h4>
           <p>Descarga todo tipo de materiales, desde guías de estudio y ejercicios prácticos hasta videos educativos y presentaciones, todo en un solo lugar. Todo nuestro contenido es gratuito y está disponible para ti las 24 horas del día, los 7 días de la semana. ¿Qué esperas? ¡Explora nuestro sitio y descarga todo lo que necesitas para alcanzar tus metas académicas y profesionales!</p>
+
           <h4>Comparte contenido</h4>
-          <p>Aquí podrás compartir tus conocimientos y habilidades con una comunidad de estudiantes de la FCFM, aprendices y profesionales. Crea publicaciones sobre tus intereses, sube videos, fotos y cualquier otro tipo de material multimedia para que otros puedan aprender de ti. ¡Únete ahora y comparte tus ideas con el mundo!</p>
+          <p>Aquí podrás compartir tus conocimientos y habilidades con una comunidad de estudiantes de la FCFM. Crea publicaciones sobre tus intereses, sube videos, fotos y cualquier otro tipo de material multimedia para que otros puedan aprender de ti. ¡Únete ahora y comparte tus ideas con el mundo!</p>
         </div>
         <div class="col s12 m6">
           <div class="card-panel grey lighten-4 grey-text text-darken-4 z-depth-0">
