--- a/LCC.html
+++ b/LCC.html
@@ -50,7 +50,7 @@
             </li>
           </ul>
           <ul class="side-nav" id="mobile-nav">
-            <h4 class="purple-text text-darken-4 center">Campana</h4>
+            <h4 class="purple-text text-darken-4 center">MPCU</h4>
             <li>
               <div class="divider"></div>
             </li>
@@ -169,13 +169,13 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Sobre nosotros</h5>
-          <p class="grey-text text-lighten-4">Somo una comunidad estudiantil de la Facultad de Ciencias Físico Matemáticas que cree que todos deberíamos tener acceso a la educación.</p>
+          <p class="grey-text text-lighten-4">Somo una comunidad estudiantil de la Facultad de Ciencias Físico Matemáticas que cree que todos deberíamos tener acceso a la educación en la cultura de paz y las MASC.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
           <ul>
             <li>
-              <a class="grey-text text-lighten-3" href="../UniTools/index.html">Inicio</a>
+              <a class="grey-text text-lighten-3" href="../MPCU/index.html">Inicio</a>
             </li>
             <li>
               <a class="grey-text text-lighten-3" href="QuienSomos.html">Mas Sobre Nosotros</a>
@@ -190,7 +190,7 @@
     </div>
     <div class="footer-copyright deep-purple darken-1">
       <div class="container">
-        UniTools &copy; 2023
+        MPCU &copy; 2023
         <a class="grey-text text-lighten-4 right" href="#!">Términos y Condiciones</a>
       </div>
     </div>
