--- a/QuienSomos.html
+++ b/QuienSomos.html
@@ -51,7 +51,7 @@
             </li>
           </ul>
           <ul class="side-nav" id="mobile-nav">
-            <h4 class="purple-text text-darken-4 center">UniTools</h4>
+            <h4 class="purple-text text-darken-4 center">MPCU</h4>
             <li>
               <div class="divider"></div>
             </li>
