--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </li>
           </ul>
           <ul class="side-nav" id="mobile-nav">
-            <h4 class="purple-text text-darken-4 center">Campana</h4>
+            <h4 class="purple-text text-darken-4 center">MPCU</h4>
             <li>
               <div class="divider"></div>
             </li>
@@ -68,9 +68,6 @@
             </li>
             <li>
               <div class="divider"></div>
-            </li>
-            <li>
-              <a href="./login-mobile.html" class="btn purple">Login</a>
             </li>
           </ul>
         </div>
@@ -157,7 +154,7 @@
     <div class="container">
       <div class="row">
         <h4 class="center">Consulta nuestras 
-          <span class="deep-purple-text text-darken-1"> guías para la solución de conflictos</span>
+          <span class="deep-purple-text text-darken-1"> guías</span>
         </h4>
         <br>
         <br>
@@ -287,7 +284,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Sobre nosotros</h5>
-          <p class="grey-text text-lighten-4">Somo una comunidad estudiantil de la Facultad de Ciencias Físico Matemáticas que cree que todos deberíamos tener acceso a la educación.</p>
+          <p class="grey-text text-lighten-4">Somo una comunidad estudiantil de la Facultad de Ciencias Físico Matemáticas que cree que todos deberíamos tener acceso a la educación en la cultura de paz y las MASC.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
@@ -308,7 +305,7 @@
     </div>
     <div class="footer-copyright deep-purple darken-1">
       <div class="container">
-        UniTools &copy; 2023
+        MPCU &copy; 2023
         <a class="grey-text text-lighten-4 right" href="#!">Términos y Condiciones</a>
       </div>
     </div>
