--- a/signup.html
+++ b/signup.html
@@ -52,7 +52,7 @@
             </li>
           </ul>
           <ul class="side-nav" id="mobile-nav">
-            <h4 class="purple-text text-darken-4 center">UniTools</h4>
+            <h4 class="purple-text text-darken-4 center">MPCU</h4>
             <li>
               <div class="divider"></div>
             </li>
