--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="carousel-item" href="#three!">
               <h2>Opiniones</h2>
               <p class="flow-text" style="user-select: non
-              !important;">"Siempre había sentido curiosidad por la mediación y cómo podía aplicarla en mi vida personal y profesional. Gracias a la página de Cultura de Paz, me sumergí en la Maestría en Métodos Alternos para la Solución de Conflictos impartida por el Dr. Genaro Bermejo Acosta. Esta experiencia ha sido transformadora, brindándome un enfoque práctico y valioso para resolver conflictos de manera más pacífica y efectiva. Ahora estoy emocionada de compartir este conocimiento con mi equipo de trabajo y promover una cultura de paz en nuestra organización."
+              !important;">"Siempre había sentido curiosidad por la mediación y cómo podía aplicarla en mi vida personal y profesional. Gracias a la página de Cultura de Paz, me sumergí en la Maestría en Métodos Alternos para la Solución de Conflictos. Esta experiencia ha sido transformadora, brindándome un enfoque práctico y valioso para resolver conflictos de manera más pacífica y efectiva. Ahora estoy emocionada de compartir este conocimiento con mi equipo de trabajo y promover una cultura de paz en nuestra organización."
                 <p>
                   <em>- Sarah</em>
                 </p>
